--- a/style-kyanotypia.css
+++ b/style-kyanotypia.css
@@ -8,7 +8,7 @@
   text-decoration: none;
   font-size: 40px;
   margin: 0px;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.35);
+ /* box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.35); */
 }
 /* Add an active class to highlight the current page */
 .topnav a.active {
@@ -19,7 +19,10 @@
   color: white;
   font-family: 'Roboto Mono', monospace;
 }
-.topnav a:hover {background: #b3b3b3;
+.topnav a:hover {
+  background: var(--color-gray-90);
+  color: var(--color-gray-50);
+  border:2px solid #000;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
