--- a/style-kyanotypia.css
+++ b/style-kyanotypia.css
@@ -250,6 +250,7 @@ span{
   color:white;
   font-size: 20px;
   font-family: 'Roboto Mono', monospace;
+  text-decoration:none;
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
@@ -258,7 +259,7 @@ span{
 }
 .footer-links.inline li
 {
-  display:inline-block
+  display:inline-block;
 }
 
 
